# beebo-notes-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
beebo_api/: .dockerignore  Cargo.toml  Dockerfile  build.rs
beebo_api/beebo_notes/: notes.txt
beebo_api/proto/beebo/v1/: callbeebo.proto
beebo_api/src/: main.rs
beebo_api/src/grpc/: grpc_server.rs  grpc_service.rs  mod.rs
beebo_api/src/handler/: beebo_dialog.rs  mod.rs
beebo_api/src/infra/: http_server.rs
beebo_api/src/model/: ai_model.rs  app_model.rs  mod.rs  server.rs  system_model.rs
beebo_api/src/services/: execute_beebo.rs  git_service.rs  mod.rs  send_question.rs  take_notes.rs
beebo_cron_worker/: Cargo.toml  Dockerfile
beebo_cron_worker/src/: cron.rs  grpc.rs  main.rs
beebo_notes/: notes.txt
src/: main.rs
src/ai/: mod.rs  prompt.rs
src/handler/: mod.rs
src/infra/: mod.rs
src/model/: server.rs
src/services/: git_service.rs  send_question.rs  take_notes.rs
