[package]
name = "beebo_api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
prost = "0.14.3"
reqwest = { version = "0.13.3", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1", features = ["full"] }
tonic = "0.14.6"
tonic-prost = "0.14.6"
tracing = "0.1.44"

[build-dependencies]
tonic-prost-build = "0.14.6"
