[package]
name = "beebo_cron_worker"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.14.3"
tokio = { version = "1.52.3", features = ["full"] }
tokio-cron-scheduler = "0.15.1"
tonic = "0.14.6"
tonic-build = "0.14.6"
tonic-prost = "0.14.6"

[build-dependencies]
tonic-prost-build = "0.14.6"
